log/build_2023-10-28_20-55-29/template_drone_control/stderr.log
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:74:9: warning: multi-line comment [-Wcomment]
   74 |         // TODO: Arm and Take Off\
      |         ^
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:215:29: error: redeclaration of ‘mavros_msgs::msg::State TemplateDroneControl::arming_client_’
  215 |     mavros_msgs::msg::State arming_client_;
      |                             ^~~~~~~~~~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:208:62: note: previous declaration ‘rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr TemplateDroneControl::arming_client_’
  208 |     rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr arming_client_;
      |                                                              ^~~~~~~~~~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:90:14: error: conflicting declaration ‘auto result’
   90 |         auto result = arming_client_->async_send_request(std::make_shared<mavros_msgs::srv::CommandBool::Request>(arm_request));
      |              ^~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:65:14: note: previous declaration as ‘std::shared_future<std::shared_ptr<mavros_msgs::srv::SetMode_Response_<std::allocator<void> > > > result’
   65 |         auto result = set_mode_client_->async_send_request(std::make_shared<mavros_msgs::srv::SetMode::Request>(guided_set_mode_req));
      |              ^~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:107:14: error: conflicting declaration ‘auto result’
  107 |         auto result = takeoff_client_->async_send_request(std::make_shared<mavros_msgs::srv::CommandTOL::Request>(takeoff_request));
      |              ^~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:65:14: note: previous declaration as ‘std::shared_future<std::shared_ptr<mavros_msgs::srv::SetMode_Response_<std::allocator<void> > > > result’
   65 |         auto result = set_mode_client_->async_send_request(std::make_shared<mavros_msgs::srv::SetMode::Request>(guided_set_mode_req));
      |              ^~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::publish(geometry_msgs::msg::PoseStamped)’:
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:177:56: warning: unused parameter ‘setpoint_to_send’ [-Wunused-parameter]
  177 |     void publish(const geometry_msgs::msg::PoseStamped setpoint_to_send)
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::local_pos_cb(geometry_msgs::msg::PoseStamped_<std::allocator<void> >::SharedPtr)’:
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:196:42: warning: statement has no effect [-Wunused-value]
  196 |         current_local_pos_.pose.position.x;
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:197:42: warning: statement has no effect [-Wunused-value]
  197 |         current_local_pos_.pose.position.y;
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:198:42: warning: statement has no effect [-Wunused-value]
  198 |         current_local_pos_.pose.position.z;
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
